docs(v0.4.1): T6 wild-corpus static-classification rerun receipt
Empirical proof that v0.4.1-rc (commit 11d1a70, T3 + T4 merged) does
not regress the translator/dispatcher path for any of the 12
wild-corpus Jenkinsfiles.

Method: built v0.4.1-rc uberjar, booted a parallel daemon on :8766
against an isolated SQLite DB with all leapfrog flags ON (provenance,
flaky, container-step, dockerfile-agent), registered all 12 wild
Jenkinsfiles via /anvil/admin/jobs (sourced byte-identically from the
dogfood DB — same exact bytes as v0.3.3 ran against), triggered build
#1 of each, captured the classify-rule.

Headline: 12/12 classified honestly. Zero crashes. Zero silent-SUCCESS
regressions. Zero new translator.body-skipped cases. Every v0.3.3
verdict either matches exactly or moved to a stricter honest rule
(AN6-2 lifted apache-cxf out of body-skipped, AN6-5 still surfaces
eclipse-jkube credential-unresolved, AN5-2 keeps hibernate-orm/search
at neutral no-effects-recorded).

What this proves about v0.4.1 specifically:
  - T3 (AI authoring) is genuinely dormant when its flag is off —
    no :ai-suggested effect emitted for any of the 12 builds even
    with other leapfrog flags ON, confirming the AV4-7 closed-by-
    default contract holds at runtime.
  - T4 (SLSA L3 provenance) is genuinely dormant for builds that
    don't archiveArtifacts — the h-archive hook is never reached
    for these Jenkinsfiles, no :provenance/attested or
    :provenance/degraded effects, build pages render identically
    to v0.4.0. T4's end-to-end signing path is proven separately
    by the opt-in real-cosign integration test in T4.3.

What this run does NOT prove: real-artifact totals (this is
no-SCM static classification; for the artifact-bytes metric the
operator must layer SCM configs and bump --max-minutes ≥ 90 for
hbase). Documented in the "How to reproduce" section + the new
scripts/wild-corpus-static-rerun.bb harness.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>